force-app/main/default/objects/QCC_Case_Stream_Switch__mdt/QCC_Case_Stream_Switch__mdt.object-meta.xml
<CustomObject>
    <description>This contains all the case type and status combination to send the Case Stream update.</description>
    <label>QCC Case Stream Switch</label>
    <pluralLabel>QCC Case Stream Switches</pluralLabel>
</CustomObject>