force-app/main/default/objects/QCC_Case_Stream_Switch__mdt/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>The status of the case record separated by semi colon.</description>
    <inlineHelpText>The status of the case record separated by semi colon.</inlineHelpText>
    <label>Case Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>