force-app/main/default/objects/QCC_Case_Stream_Switch__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>The type of the case record.</description>
    <inlineHelpText>The type of the case record.</inlineHelpText>
    <label>Case Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>