force-app/main/default/objects/QCC_Case_Stream_Switch__mdt/fields/Is_Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>Is_Batch_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine if the case type is triggered in batch or not.</description>
    <inlineHelpText>This will determine if the case type is triggered in batch or not.</inlineHelpText>
    <label>Is Batch Process?</label>
    <type>Checkbox</type>
</CustomField>