force-app/main/default/objects/QCC_Case_Stream_Switch__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Case_Status__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Is_Batch_Process__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>